# iora_codecs

./: .gitignore  .gitmodules  CMakeLists.txt  NOTICE  README.md
cmake/: CodecModules.cmake  SubmoduleTargets.cmake  speexdsp_config_types.h
docs/: architecture.json  programmers_manual.md  submodule-dependencies.md
include/iora/codecs/codec/: codec_info.hpp  codec_registry.hpp  i_codec.hpp  i_codec_factory.hpp
include/iora/codecs/core/: media_buffer.hpp  media_buffer_pool.hpp  media_clock.hpp
include/iora/codecs/dsp/: audio_mixer.hpp  gain.hpp  goertzel_detector.hpp  resampler.hpp  tone_generator.hpp  vad.hpp  wav_reader.hpp  wav_writer.hpp
include/iora/codecs/format/: pixel_format.hpp  sample_format.hpp
include/iora/codecs/pipeline/: audio_mixer_handler.hpp  i_media_handler.hpp  media_pipeline.hpp  stage_metrics.hpp  transcoding_handler.hpp
modules/: CMakeLists.txt
modules/amr/: CMakeLists.txt  amr_nb_codec.cpp  amr_nb_codec.hpp  amr_nb_codec_factory.cpp  amr_nb_codec_factory.hpp  amr_wb_codec.cpp  amr_wb_codec.hpp  amr_wb_codec_factory.cpp  amr_wb_codec_factory.hpp  mod_amr.cpp
modules/av1/: CMakeLists.txt  av1_codec.cpp  av1_codec.hpp  av1_codec_factory.cpp  av1_codec_factory.hpp  mod_av1.cpp
modules/codec_registry/: CMakeLists.txt  mod_codec_registry.cpp
modules/g711/: CMakeLists.txt  g711_codec.hpp  g711_codec_factory.hpp  mod_g711.cpp
modules/g722/: CMakeLists.txt  g722_codec.cpp  g722_codec.hpp  g722_codec_factory.cpp  g722_codec_factory.hpp  mod_g722.cpp
modules/g729/: CMakeLists.txt  g729_codec.cpp  g729_codec.hpp  g729_codec_factory.cpp  g729_codec_factory.hpp  mod_g729.cpp
modules/h264/: CMakeLists.txt  h264_codec.cpp  h264_codec.hpp  h264_codec_factory.cpp  h264_codec_factory.hpp  mod_h264.cpp
modules/ilbc/: CMakeLists.txt  ilbc_codec.cpp  ilbc_codec.hpp  ilbc_codec_factory.cpp  ilbc_codec_factory.hpp  mod_ilbc.cpp
modules/opus/: CMakeLists.txt  mod_opus.cpp  opus_codec.cpp  opus_codec.hpp  opus_codec_factory.cpp  opus_codec_factory.hpp
modules/registry/: CMakeLists.txt  mod_registry.cpp
modules/vpx/: CMakeLists.txt  mod_vpx.cpp  vpx_codec.cpp  vpx_codec.hpp  vpx_codec_factory.cpp  vpx_codec_factory.hpp
src/codec/: codec_registry.cpp
src/dsp/: audio_mixer.cpp  resampler.cpp
src/pipeline/: audio_mixer_handler.cpp  media_pipeline.cpp  stage_metrics.cpp  transcoding_handler.cpp
tests/: CMakeLists.txt  build_smoke_test.cpp
tests/codec/: test_amr_codec.cpp  test_amr_plugin.cpp  test_av1_codec.cpp  test_av1_plugin.cpp  test_g711_codec.cpp  test_g711_plugin.cpp  test_g722_codec.cpp  test_g722_plugin.cpp  test_g729_codec.cpp  test_g729_plugin.cpp  test_h264_codec.cpp  test_h264_plugin.cpp  test_ilbc_codec.cpp  test_ilbc_plugin.cpp  test_opus_codec.cpp  test_opus_plugin.cpp  test_registry_plugin.cpp  test_vpx_codec.cpp  test_vpx_plugin.cpp
tests/core/: mock_codec.hpp  test_codec_info.cpp  test_codec_registry.cpp  test_media_buffer.cpp  test_media_clock.cpp  test_pixel_format.cpp  test_sample_format.cpp
tests/dsp/: test_audio_mixer.cpp  test_dsp_pipeline_integration.cpp  test_gain.cpp  test_goertzel_detector.cpp  test_resampler.cpp  test_tone_generator.cpp  test_vad.cpp  test_wav_reader.cpp  test_wav_writer.cpp
tests/pipeline/: test_audio_mixer_handler.cpp  test_media_pipeline.cpp  test_transcoding_handler.cpp
